@@ -502,8 +502,8 @@ If encoding is nil, it is determined from its contents."
   "A string formatted version of mime-transfer-level")
 (make-variable-buffer-local 'mime-transfer-level-string)
 
-(put 'iso-2022-jp-2 'mime-charset-comment "RFC1554")
-(put 'iso-2022-jp 'mime-charset-comment "RFC1468 with trivial bugfix")
+;;(put 'iso-2022-jp-2 'mime-charset-comment "RFC1554")
+;;(put 'iso-2022-jp 'mime-charset-comment "RFC1468 with trivial bugfix")
 
 ;;; @@ about content transfer encoding
 
